<resources>
    <string name="app_name">Library Management System</string>
    <string name="title_home">Home</string>
    <string name="title_library">Library</string>
    <string name="title_profile">Profile</string>
    <string name="imageViewLogo">homePageLogo</string>
    <string name="textViewDescription">This app is made for the benefit of both the librarian as well as the readers to keep a track of their activities in the library and deal with the problems faced in the process. Happy Reading!</string>
    <string name="textViewAbout">ABOUT THE APP</string>
    <string name="button">Button</string>
    <string name="textViewHeading">Library Management System</string>

    <string name="buttonGoogle">Continue with Google</string>
    <string name="buttonPhone">Continue with Phone</string>
</resources>